force-app/main/default/objects/Hotel__c/Hotel__c.object-meta.xml
<CustomObject>
    <label>Hotel</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Hotel Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>