force-app/main/default/objects/Hotel__c/fields/Book_requirement__c.field-meta.xml
<CustomField>
    <fullName>Book_requirement__c</fullName>
    <label>Book requirement</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>