force-app/main/default/objects/Hotel__c/fields/HotelName__c.field-meta.xml
<CustomField>
    <fullName>HotelName__c</fullName>
    <label>Hotel Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>