force-app/main/default/objects/Hotel__c/fields/Paid_by__c.field-meta.xml
<CustomField>
    <fullName>Paid_by__c</fullName>
    <label>Paid by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LVM</fullName>
            </value>
            <value>
                <fullName>Zone</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>