force-app/main/default/objects/Hotel__c/fields/ProgramId__c.field-meta.xml
<CustomField>
    <fullName>ProgramId__c</fullName>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Hotels</relationshipLabel>
    <relationshipName>Hotels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>