force-app/main/default/objects/Hotel__c/recordTypes/Business_Hotel.recordType-meta.xml
<RecordType>
    <fullName>Business_Hotel</fullName>
    <active>true</active>
    <label>Business Hotel</label>
</RecordType>