force-app/main/default/objects/Hotel__c/validationRules/VR_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Date</fullName>
    <active>true</active>
    <errorConditionFormula>if(From__c &lt;= To__c , false, true)</errorConditionFormula>
    <errorMessage>&apos;From&apos; date must be equal or earlier than &apos;To&apos; date</errorMessage>
</ValidationRule>