force-app/main/default/objects/Hotel__c/validationRules/VR_HotelLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_HotelLocation</fullName>
    <active>true</active>
    <description>Location of the hotel is required.</description>
    <errorConditionFormula>ISBLANK(Location__c)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>&quot;Location&quot; is required.</errorMessage>
</ValidationRule>