force-app/main/default/objects/Hotel__c/validationRules/VR_HotelName.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_HotelName</fullName>
    <active>true</active>
    <description>Hotel&apos;s name is Required !!</description>
    <errorConditionFormula>ISBLANK(HotelName__c)</errorConditionFormula>
    <errorDisplayField>HotelName__c</errorDisplayField>
    <errorMessage>&quot;Hotel Name&quot; is required.</errorMessage>
</ValidationRule>